download videos from Yle servers
Copyright 2009-2018 Antti Ajanki
Distributed under the GPL v3

xx xxx 2018, version 2.35

- Download the HLS variant of the live TV streams by default (similar to the
  web Areena). Use "--backend adobehdsphp" to download the HDS variants like
  the earlier versions.
- Argument values can now be set in a config file. See yledl.conf.sample.

12 Jul 2018, Version 2.34

- Possibility to download only the subtitles, not the video: --subtitlesonly
- All downloader backends can now be enabled or disabled using the --backend argument
- --showmetadata displays the available backends for each stream
- Fixed news clip downloading after changes to the Yle news site

19 Jun 2018, Version 2.33

- Support for the football world cup streams
- Fixed live radio streams. They were broken because of changes in Areena.

15 Apr 2018, Version 2.32

- Fix parsing of non-ASCII command line arguments on Python 2
- The mcrypt PHP extension is not required anymore
- Prefer PyCryptodome instead of pycrypto. Pycrypto works still for
  now but I may drop the support in some future version.
- Improved error message if a download fails because of the geo
  restriction
- Fix spawning of subprocesses on Windows

10 Feb 2018, Version 2.31

- Support the /tv/ohjelmat URLs
- Support the new live radio URLs. Drop the support for the old URLs.
- Download the HLS version of a live radio stream (like the Areena web app)
- Include subtitles when piping a video
- Don't restart and remove a partially downloaded file
- Don't restart a piped download when the media player is closed
- Geo restrictions warning was some times shown unnecessary

19 Dec 2017, Version 2.30

- yle-dl now runs on Python 3.5 and 3.6 (as well as on Python 2.7 like before)

7 Dec 2017, Version 2.29

- New argument --resolution for selecting stream by vertical resolution
- Reduce repetition in output filenames
- Remove genre prefixes ("Elokuva:", "Kino:", etc.) from output filenames